# For-python-code

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  publish.yml  test.yml
src/jokes/: __init__.py  jokes.py
tests/: test_jokes.py
